<resources>
    <string name="app_name">"My App Portfolio "</string>
    <string name="toast_text">This button will launch : %s</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="button_title_spotify_streamer">Spotify Streamer</string>
    <string name="button_title_scores_app">Scores App</string>
    <string name="button_title_library_app">Library App</string>
    <string name="button_title_build_it_bigger">Build It Bigger</string>
    <string name="button_title_xyz_reader">XYZ Reader</string>
    <string name="button_title_capstone">Capstone</string>
</resources>
