<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:weightSum="1">

    <TextView
        android:text="@string/title"
        android:id="@+id/textView"
        style="@style/TextStyle.Title" />

    <Button
        style="@style/TextStyle.ButtonStyle"
        android:text="@string/button_title_spotify_streamer"
        android:onClick="onClickButton"
        android:id="@+id/spotify_streamer"  />

    <Button
        style="@style/TextStyle.ButtonStyle"
        android:text="@string/button_title_scores_app"
        android:onClick="onClickButton"
        android:id="@+id/scores_app" />

    <Button
        style="@style/TextStyle.ButtonStyle"
        android:text="@string/button_title_library_app"
        android:onClick="onClickButton"
        android:id="@+id/library_app" />

    <Button
        style="@style/TextStyle.ButtonStyle"
        android:text="@string/button_title_build_it_bigger"
        android:onClick="onClickButton"
        android:id="@+id/build_it_bigger" />

    <Button
        style="@style/TextStyle.ButtonStyle"
        android:text="@string/button_title_xyz_reader"
        android:id="@+id/xyz_reader"
        android:onClick="onClickButton"
        />

    <Button
        style="@style/TextStyle.ButtonStyle"
        android:text="@string/button_title_capstone"
        android:onClick="onClickButton"
        android:id="@+id/capstone"
        />

</LinearLayout>
